2003-07-15  Duncan Mak  <duncan@ximian.com>

	* sources/Gtk.metadata
	(GtkIconSet): hide the GetSizes method.
	(GtkTextBuffer): new overrides
		MoveMarkByName    -> MoveMark
		DeleteMarkByName  -> DeleteMark
		ApplyTagByName    -> ApplyTag
		RemoveTagByName   -> RemoveTag
	(GtkItemFactory): new overrides
		GetItemByAction   -> GetItem
		GetWidgetByAction -> GetWidget

	These two changes fixes bug #46388.

	(GtkHTML): overrides for Begin, mark BeginContent and BeginFull as
	overrides of Begin. This fixes bug #46427.

	* sources/gtkhtml-font-style-enum.patch: A patch to use real values
        in gtkhtml-enums.h so that the parser won't choke on the complex enum
        declarations.

	* sources/makefile: Apply the above patch after checking out the
        source code for GtkHTML.

2003-07-14  Mike Kestner <mkestner@speakeasy.net>

	* api/*-api.xml : regenerated
	* gdk/Drawable.custom : DrawRectangle filled param is now bool
	* generator/Parameters.cs : studlify names ending w/ uscore
	* gtk/GtkSharp.GtkClipboardClearFuncNative : s/Opaque/Object
	* gtk/GtkSharp.GtkClipboardGetFuncNative : s/Opaque/Object
	* parser/gapi2xml.pl : put <ns>_string_* methods in Global
	* sample/Scribble.cs : update to new DrawRectangle api
	* sources/Gdk.metadata : hide some conflicting methods
	* sources/Gtk.metadata : finally fix the Progress crap and
	renames, hides and such to fix conflicts
	* sources/README : mention new gtk-2.2 reqs
	* sources/gtk-sharp.sources : update to new gtk-2.2 reqs
	* sources/makefile : update for 2.2 api

2003-07-12  Mike Kestner <mkestner@speakeasy.net>

	* api/gda-api.xml : hide the new Type class
	* source/Gda.metadata : hide the new Type class
	
2003-07-11  Mike Kestner <mkestner@speakeasy.net>

	* gdk/Selection.custom : add static fields for the  primary, 
	secondary, and clipboard and clipboard selection Gdk.Atoms.
	* glue/Makefile.am : add selection.c
	* glue/selection.c : add glue to get the atoms.