@@ -1,5 +1,11 @@
 2003-07-15  Duncan Mak  <duncan@ximian.com>
 
+	* sources/makefile (get-source-code): make it go a bit faster by
+	checking out all files in one go.
+
+	* gtk/IconSet.custom (Sizes): added proper binding to
+	gtk_icon_set_get_sizes (), this fixes bug #45835.
+
 	* sources/Gtk.metadata
 	(GtkIconSet): hide the GetSizes method.
 	(GtkTextBuffer): new overrides
